cambio de procentaje tabla C
en los objetos C de las notas se cambnio el 60
% por el 80% y el 40% por el 20%

--- a/plataforma/src/app/docente/docente.component.html
+++ b/plataforma/src/app/docente/docente.component.html
@@ -1774,9 +1774,9 @@
            <th style="color: white" scope="col" class="verticalText">Tarea 4 </th>
            <th style="color: white" scope="col" class="verticalText">Examen </th>
           <!-- Evaluaciones-->
-          <th style="color: white" scope="col" class="verticalText">60% </th>
+          <th style="color: white" scope="col" class="verticalText">80% </th>
           <th style="color: white" scope="col" class="verticalText">Examen Final</th>
-          <th style="color: white" scope="col" class="verticalText">40%</th>
+          <th style="color: white" scope="col" class="verticalText">20%</th>
 
 
           <!-- Promedio-->
@@ -1900,7 +1900,7 @@
 
           <td id="tdfila" style="background-color:yellow">
             <input disabled style="background-color: yellow" id="tdboton" type="text"
-              [(ngModel)]="  this.objectCalculableC[i].sesentaporciento" name="sesentaporciento{{i}}">
+              [(ngModel)]="this.objectCalculableC[i].ochentaporciento" name="ochentaporciento{{i}}">
           </td>
           <td id="tdfila">
             <input id="tdboton" type="text" [(ngModel)]="this.objectC[i].examenFinal" name="examenFinal{{i}}">
@@ -1908,7 +1908,7 @@
 
           <td id="tdfila" style="background-color:yellow">
             <input disabled id="tdboton" style="background-color:yellow"
-              [(ngModel)]="this.objectCalculableC[i].cuarentaporciento" name="cuarentaporciento{{i}}" type="text">
+              [(ngModel)]="this.objectCalculableC[i].veinteporciento" name="veinteporciento{{i}}" type="text">
           </td>
           <td id="tdfila" style="background-color:rgb(215, 253, 138)">
             <input disabled id="tdboton" style="background-color:rgb(215, 253, 138)"
@@ -2044,9 +2044,9 @@
            <th style="color: white">Ex </th>
 
           <!-- Evaluaciones-->
-          <th style="color: white">60% </th>
+          <th style="color: white">80% </th>
           <th style="color: white">Ex Final</th>
-          <th style="color: white">40%</th>
+          <th style="color: white">20%</th>
 
 
           <!-- Promedio-->
@@ -2109,9 +2109,9 @@
 
 
 
-          <td id="tdfila">{{ this.objectCalculableC[i].sesentaporciento}}</td>
+          <td id="tdfila">{{ this.objectCalculableC[i].ochentaporciento}}</td>
           <td id="tdfila">{{this.objectC[i].examenFinal}}</td>
-          <td id="tdfila">{{ this.objectCalculableC[i].cuarentaporciento}}</td>
+          <td id="tdfila">{{ this.objectCalculableC[i].veinteporciento}}</td>
           <td id="tdfila">{{this.objectCalculableC[i].promedioFinal}}</td>
           <td id="tdfila">{{this.objectC[i].examenSupletorio}}</td>
           <td id="tdfila">{{this.objectC[i].examenRemedial}}</td>
